platform/k8s/network-policies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: carsharing
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-to-services
  namespace: carsharing
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: carsharing
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: api-gateway
      toPorts:
        - ports:
            - port: "8001"
              protocol: TCP
            - port: "8002"
              protocol: TCP
            - port: "8003"
              protocol: TCP
            - port: "8004"
              protocol: TCP
            - port: "8005"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-services-to-data
  namespace: carsharing
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: carsharing
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": data
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "27017"
              protocol: TCP
            - port: "6379"
              protocol: TCP
            - port: "9042"
              protocol: TCP
            - port: "9092"
              protocol: TCP
            - port: "9000"
              protocol: TCP
